Bug 103198 - [Qt] QStyleFacadeImp build break with latest Qt 5
Summary: [Qt] QStyleFacadeImp build break with latest Qt 5
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Qt (show other bugs)
Version: 528+ (Nightly build)
Hardware: Mac OS X 10.8
: P2 Normal
Assignee: Michael Brüning
URL:
Keywords:
Depends on:
Blocks: 76773
  Show dependency treegraph
 
Reported: 2012-11-25 09:40 PST by J-P Nurmi
Modified: 2012-11-26 02:36 PST (History)
2 users (show)

See Also:


Attachments
Patch (3.92 KB, patch)
2012-11-26 01:57 PST, Michael Brüning
hausmann: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description J-P Nurmi 2012-11-25 09:40:07 PST
QMacStyle has been made internal in Qt 5. The QMacStyle include should be removed, and relevant qobject_casts should be replaced by QObject::inherits("QMacStyle").

Change I44a2f5ee: Made QMacStyle internal
https://codereview.qt-project.org/#change,39716
Comment 1 Michael Brüning 2012-11-26 00:27:40 PST
Will make a fix.
Comment 2 Michael Brüning 2012-11-26 01:57:20 PST
Created attachment 175944 [details]
Patch
Comment 3 Simon Hausmann 2012-11-26 02:28:55 PST
Comment on attachment 175944 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=175944&action=review

> Source/WebKit/qt/ChangeLog:8
> +        Original patch by J-P Nurmi <jpnurmi@gmail.com>.

Shouldn't that be his digia email address?
Comment 4 Michael Brüning 2012-11-26 02:36:20 PST
Committed r135696: <http://trac.webkit.org/changeset/135696>