[Qt] QStyleFacadeImp build break with latest Qt 5 https://bugs.webkit.org/show_bug.cgi?id=103198

Reviewed by Simon Hausmann.

Original patch by J-P Nurmi <jpnurmi@digia.com>.

Fixes QtWebKit build by replacing qobject_cast to
QMacStyle with calls to QObject::inherits. Also
replaces Q_WS_MAC preprocesser directives with Q_OS_MAC
for Qt 5 compatibility.

* WebCoreSupport/QStyleFacadeImp.cpp:
(WebKit::QStyleFacadeImp::getButtonMetrics):
(WebKit::QStyleFacadeImp::paintComboBox):
(WebKit::QStyleFacadeImp::paintInnerSpinButton):
(WebKit::QStyleFacadeImp::paintScrollBar):

git-svn-id: svn://svn.chromium.org/blink/trunk@135696 bbb929c8-8fbe-4397-9dbb-9b2b20218538